# pytest-sqlguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sqlguard-ci.yml
benchs/: bench_sql_fingerprint.py
rust/: Cargo.toml
rust/src/: lib.rs
src/pytest_sqlguard/: perf_rec.py
tests/: test_file_is_created_and_contains_ok_stuff.py  test_file_is_created_and_contains_ok_stuff.queries.yaml  test_sqlguard_options.queries.yaml
tests/unit_tests/: test_perf_rec.py
